# pmwt

./: ARCHITECTURE.md  Makefile  README.md  SPEC.md  __init__.py  audit_deep_correctness.py  audit_simulation_correctness.py  pyproject.toml
agent/: __init__.py  gae.py  helper_critic.py  losses.py  networks.py  ppo.py  ppo_transformer.py  rollout.py  trainer.py  transformer_backbone.py
analysis/: REWARD_DESIGN.md  bandit_efficiency.py  reward_retune.py  trading_learning.py
backtest/: __init__.py  engine.py  metrics.py  promotion.py  results.py  validation.py
calibration/: __init__.py  calibrator.py  forward_variance.py  hurst.py  jumps.py  realized.py  results.py  vol_of_vol.py  walk_forward.py
core/: __init__.py  config.py  enums.py  errors.py  logging.py  market_alpha.py  random.py  timegrid.py  validation.py
deliverables/: ARCHITECTURE.md  CRITICALITY.md  ISSUES.md  MANIFEST_README.md  REVIEW.md  extract_deps.py  modules.json
execution/: SAFETY.md  __init__.py  broker.py  ibkr.py  live_guard.py  oms.py  orders.py
market/: __init__.py  alpha_noise.py  chain.py  execution_sim.py  market_maker.py  quotes.py
models/: __init__.py  drift.py  jumps.py
models/rbergomi/: __init__.py  alpha_calibration.py  diagnostics.py  kernel.py  neural_simulator.py  noise.py  params.py  results.py  simulator.py
news/: __init__.py  calendar.py  classifier.py  events.py  gate.py  providers.py
options_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pricing/: __init__.py  black_scholes.py  instruments.py  monte_carlo.py  payoff.py  portfolio.py
regime/: __init__.py  calibration.py  detector.py  features.py  gate.py  hmm.py  metrics.py
rl/: __init__.py  action.py  env.py  growth_reward.py  observation.py  reward.py  scenario.py
services/: __init__.py  runner.py
strategy/: __init__.py  account.py  condor_selection.py  entry.py  exit.py  risk_supervisor.py  sizing.py
surrogate/: __init__.py  dataset.py  distribution.py  features.py  guardrail.py  losses.py  metrics.py  quantile_network.py  surrogate.py
tests/: conftest.py  test_training_integrity.py
tests/agent/: test_gae.py  test_helper_critic.py  test_losses.py  test_networks.py  test_ppo.py  test_rollout.py  test_trainer.py  test_transformer_backbone.py
tests/backtest/: test_engine.py  test_metrics.py  test_promotion.py  test_validation.py
tests/calibration/: conftest.py  test_calibrator.py  test_forward_variance.py  test_hurst.py  test_jumps.py  test_realized.py  test_results.py  test_vol_of_vol.py
tests/core/: test_config.py  test_errors.py  test_logging.py  test_market_alpha.py  test_random.py  test_timegrid.py  test_validation.py
tests/execution/: test_broker.py  test_live_safety.py  test_oms.py  test_orders.py
tests/market/: test_alpha_noise.py  test_chain.py  test_execution_sim.py  test_market_maker.py  test_quotes.py
tests/models/rbergomi/: test_alpha_calibration.py  test_diagnostics.py  test_kernel.py  test_neural_simulator_regression.py  test_noise.py  test_params.py  test_results.py  test_simulator.py
tests/news/: test_calendar.py  test_classifier.py  test_events.py  test_gate.py  test_providers.py
tests/pricing/: test_black_scholes.py  test_instruments.py  test_monte_carlo.py  test_payoff.py  test_portfolio.py
tests/regime/: conftest.py  test_calibration_metrics.py  test_detector_and_gate.py  test_features.py  test_hmm.py
tests/rl/: test_action.py  test_env.py  test_growth_reward.py  test_observation.py  test_reward.py  test_scenario.py
tests/services/: test_runner.py
tests/strategy/: conftest.py  test_account.py  test_condor_selection.py  test_entry_exit.py  test_entry_success.py  test_risk_supervisor.py  test_sizing.py
tests/surrogate/: test_dataset.py  test_distribution.py  test_features.py  test_guardrail.py  test_metrics.py  test_network_and_losses.py  test_surrogate.py
tmp/: patch_audit.py  patch_audit2.py
